@@ -1,8 +1,10 @@
 #include <string.h> // for mem* functions
+#ifndef _WIN32_WCE
 #include <unistd.h>
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <fcntl.h>
+#endif
 
 #include "mvelib.h"
 
