@@ -1,4 +1,4 @@
-/* $Id: mveplay.c,v 1.14 2003-06-10 04:46:16 btb Exp $ */
+/* $Id: mveplay.c,v 1.15 2003-11-25 04:36:25 btb Exp $ */
 #ifdef HAVE_CONFIG_H
 #include <conf.h>
 #endif
@@ -9,6 +9,7 @@
 //#define DEBUG
 
 #include <string.h>
+#ifndef _WIN32_WCE
 #include <errno.h>
 #include <time.h>
 #include <sys/time.h>
@@ -16,6 +17,9 @@
 #include <sys/stat.h>
 #include <fcntl.h>
 #include <unistd.h>
+#else
+# include <windows.h>
+#endif
 
 #if defined(AUDIO)
 #include <SDL.h>
@@ -125,7 +129,22 @@ struct timespec
 int nanosleep(struct timespec *ts, void *rem);
 #endif
 
-#ifdef __WIN32
+#ifdef _WIN32_WCE
+int gettimeofday(struct timeval *tv, void *tz)
+{
+	static int counter = 0;
+	DWORD now;
+
+	counter++;
+	now = GetTickCount();	
+
+	tv->tv_sec = now / 1000;
+	tv->tv_usec = (now % 1000) * 1000 + counter;
+	
+	return 0;
+}
+
+#elif defined(__WIN32)
 #include <sys/timeb.h>
 
 int gettimeofday(struct timeval *tv, void *tz)
@@ -151,7 +170,12 @@ int nanosleep(struct timespec *ts, void *rem)
 
 static int create_timer_handler(unsigned char major, unsigned char minor, unsigned char *data, int len, void *context)
 {
+
+#ifndef _WIN32_WCE
 	__extension__ long long temp;
+#else
+	long temp;
+#endif
 
 	if (timer_created)
 		return 1;
@@ -212,7 +236,9 @@ static void do_timer_wait(void)
 		ts.tv_nsec += 1000000000UL;
 		--ts.tv_sec;
 	}
-#ifdef __CYGWIN__
+#ifdef _WIN32_WCE
+	Sleep(ts.tv_sec * 1000 + ts.tv_nsec / 1000000);
+#elif defined(__CYGWIN__)
 	usleep(ts.tv_sec * 1000000 + ts.tv_nsec / 1000);
 #else
 	if (nanosleep(&ts, NULL) == -1  &&  errno == EINTR)
